# BinPacking

./: .clang-format  .envrc  .gitignore  BranchConsHdlr.cpp  BranchConsHdlr.h  BranchRule.cpp  BranchRule.h  CMakeLists.txt  CompactModel.cpp  CompactModel.h  DualVariables.h  Instance.cpp  Instance.h  Master.cpp  Master.h  Pattern.h  Pricer.cpp  Pricer.h  README.md  SCIP_ConsData.h  SubProblem.cpp  SubProblem.h  flake.nix  main.cpp
.cspell/: custom-dictionary-workspace.txt
data/: Ins_01.bpp  Ins_01.vrp  Ins_02.bp  Ins_02_infeasible.bpp
data/bpa/: u1000_00.bpa  u100_00.bpa  u20_00.bpa
